fixed spacing with bottom website links

--- a/assets/style.css
+++ b/assets/style.css
@@ -21,12 +21,23 @@ nav ul {
     margin-right: 60px;
     font-size: 20px;
     color: skyblue;
+}   
+
+li {
+    margin-right:10px;
+}
+
+h1 {
+    font-size: 42px;
+}
+
+section {
+    
 }
 
 .title-box {
     background-color: skyblue;
     width: 25%;
-    font-size: 45px;
     display: flex;
     justify-content: flex-end;
     padding-right:7px;
@@ -68,3 +79,27 @@ img {
     ;
     
  }
+
+ #contact{
+    display: flex;
+    justify-content: space-between; 
+    align-items: center;
+    padding: 1%;
+    height: 50px;
+    width:;
+    background-color: ;
+    z-index: 10;
+    color: ;
+    
+}
+
+.page-bottom {
+    display: flex;
+    position: unset;
+    justify-content:  ;
+    ;
+    list-style: none;
+    margin-right: 60px;
+    font-size: 20px;
+    color: skyblue;
+}
